@@ -90,6 +90,14 @@ $phpsessname = "phpipam";
 
 
 /**
+ * Session storage - files or database
+ *
+ * @var string
+ */
+$session_storage = "files";
+
+
+/**
  *	BASE definition if phpipam
  * 	is not in root directory (e.g. /phpipam/)
  ******************************/
